--- a/Assignment1_(iNeuron).ipynb
+++ b/Assignment1_(iNeuron).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment1 (iNeuron).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOF7C8vf0Gn0nb9p4QluOKR",
+      "authorship_tag": "ABX9TyOj3TucvJU0sRFGjdQTKY1b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,30 +43,13 @@
       "source": [
         "\n",
         "\n",
-        "**Solution 1**: The operators are performed on different types of values to obtain a new output. In this problem, the operators are *, -, / and +, and the values are 'hello', -87.8 and 6. Moreover,\n",
+        "**Solution 1**:\n",
+        "\n",
+        "*  Values     : 'hello', -87.8, 6   \n",
+        "*  expression :  *, -, /, +\n",
         "\n",
         "\n",
-        "1.   \\*  $\\rightarrow$ Multiplication operator\n",
-        "\n",
-        "2.  \\- $\\rightarrow$ Difference operator\n",
-        "\n",
-        "1.   / $\\rightarrow$ Division operator\n",
-        "2.   \\+ $\\rightarrow$ Addition operator\n",
-        "\n",
-        "Also, 'hello', -87.8 and 6 are str type, float type and int type values respectively.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "                \n"
       ]
     },
     {
@@ -75,7 +58,14 @@
         "id": "88ApLkGwJRAb"
       },
       "source": [
-        "**Solution 2:** String is a type of data which contains characters and variables is a place where we can store the values such as intergers, float, string etc. String types data are written inside the commas like 'Jauny'. Hence, spam is a variable name and 'spam' is a string type data. \n"
+        "**Solution 2:** A variable is a repository of information and a string is a type of information that is stored in a variable. \n",
+        "\n",
+        "For example: x = \"My name is Jauny\"\n",
+        "\n",
+        "Here we declare the variable name x to the string \"My name is Jauny\".\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -102,7 +92,12 @@
         "id": "pqqXoiU-e6SH"
       },
       "source": [
-        "**Solution 5:** An expression evaluates to a value. A statement does something. Statements represent an action or command e.g print statements, assignment statements. Expression is a combination of variables, operations and values that yields a result value.\n",
+        "**Solution 5:** \n",
+        "\n",
+        "* Expressions are evaluated to compute their value. Literal values, variables, binary operations, and function calls are examples of expressions.\n",
+        "*  Statements are executed to take some action. Variable assignments, loops, conditionals, and raising exceptions are examples of statements.\n",
+        "\n",
+        "\n",
         "\n"
       ]
     },
@@ -233,7 +228,7 @@
         "id": "NwzyDSANgNUr"
       },
       "source": [
-        "**Solution 8:** Variables name never start from a number, special characters and therefore the variable name eggs is valid and 100 is invaid."
+        "**Solution 8:** Variables name never start by a number therefore the variable name eggs is valid and 100 is invaid."
       ]
     },
     {
